# docs/swagger.yaml
@@ -948,6 +948,72 @@ paths:
       summary: Get Group Detail
       tags:
       - admin
+  /api/admin/groups/{groupID}/members:
+    get:
+      description: Get list of members in a group. Requires Admin.
+      parameters:
+      - description: Group Chat ID (UUID)
+        in: path
+        name: groupID
+        required: true
+        schema:
+          type: string
+      - description: Search query
+        in: query
+        name: query
+        schema:
+          type: string
+      - description: Pagination cursor
+        in: query
+        name: cursor
+        schema:
+          type: string
+      - description: Number of items per page (default 20, max 50)
+        in: query
+        name: limit
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                allOf:
+                - $ref: '#/components/schemas/data'
+                properties:
+                  data: {}
+                  meta:
+                    $ref: '#/components/schemas/helper.PaginationMeta'
+                type: object
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/helper.ResponseError'
+          description: Bad Request
+        "403":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/helper.ResponseError'
+          description: Forbidden
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/helper.ResponseError'
+          description: Not Found
+      security:
+      - BearerAuth: []
+      summary: Get Group Members
+      tags:
+      - admin
   /api/admin/groups/{groupID}/reset:
     post:
       description: Reset group's avatar, description, or name. Requires Admin.
